# presentations

./: .gitignore  present.sh  theme.css
zmq/: Pipfile  meson.build  notes.md  run.py  setup.py  slides.html  slides.md  slides.sh  test.proto  test.py
zmq/image_processing/: image.proto  image_pb2.py  proto.cpp  proto.py  source.py
zmq/pingpong/: blastem.sh  client.c  client.py  server.c  server.py
